[package]
name = "fractal"
version = "0.1.0"
edition = "2021"

[features]

[dependencies]
winit = "0.30"
num-complex = "0.4"
rayon = "1.10"
bytemuck = { version = "1.16", features = ["derive"] }
glam = { version = "0.27", features = ["bytemuck"] }
wgpu = "22"
pollster = "0.3"
tokio = { version = "1.37", features = ["full"] }
anyhow = "1.0"
num_cpus = "1.16"
image = "0.25"
parking_lot = "0.12"


[profile.release]
opt-level = 3         # Apply the highest level of optimizations.
lto = true            # Enable Link Time Optimization
codegen-units = 1     # Reduce parallel code generation which can improve optimizations

[profile.release-dev]
inherits = "release"
codegen-units = 256
lto = false

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
